<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Ciudades"
        android:orientation="vertical">

    <TextView
            android:text="@string/textodebienvenida"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/textView" android:layout_margin="16dp"
            android:gravity="center"/>
    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_popayan"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:text="@string/texto_boton_colombia"/>
    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_berlin"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:text="@string/texto_boton_alemania"/>
</LinearLayout>